--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "llvm"]
 	path = compiler
-	url = https://github.com/RadeonOpenCompute/llvm.git
-	branch = amd-hcc
+	url = https://github.com/otauqir/hcc-llvm-windows.git
+	branch = windows
 [submodule "lld"]
 	path = lld
 	url = https://github.com/RadeonOpenCompute/lld.git
 	branch = amd-hcc
 [submodule "clang"]
 	path = clang
-	url = https://github.com/RadeonOpenCompute/hcc-clang-upgrade.git
-	branch = clang_tot_upgrade
+	url = https://github.com/otauqir/hcc-clang-upgrade-windows.git
+	branch = windows
 [submodule "compiler-rt"]
 	path = compiler-rt
 	url = https://github.com/RadeonOpenCompute/compiler-rt
